force-app/main/default/objects/Profit_Loss_Reporting_Data__c/Profit_Loss_Reporting_Data__c.object-meta.xml
<CustomObject>
    <label>Profit Loss Reporting Data</label>
    <nameField>
        <displayFormat>PL-{0000000000}</displayFormat>
        <label>Profit Loss Reporting Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profit Loss Reporting Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>