force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Profit Loss Reporting Data</relationshipLabel>
    <relationshipName>Profit_Loss_Reporting_Data</relationshipName>
    <type>Lookup</type>
</CustomField>