force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Account_Project__c.field-meta.xml
<CustomField>
    <fullName>Account_Project__c</fullName>
    <formula>Account__r.Name + &quot; &gt; &quot; +  Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account &gt; Project</label>
    <type>Text</type>
</CustomField>