force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Accounting_Currency__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Currency</label>
    <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
    <relationshipLabel>Profit Loss Reporting Data</relationshipLabel>
    <relationshipName>Profit_Loss_Reporting_Data</relationshipName>
    <type>Lookup</type>
</CustomField>