force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>