force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>Project__r.pse__Region__r.ffpsai__OwnerCompany__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>