force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Est_Vs_Actual__c.field-meta.xml
<CustomField>
    <fullName>Est_Vs_Actual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Est Vs Actual</label>
    <referenceTo>pse__Est_Vs_Actuals__c</referenceTo>
    <relationshipLabel>Profit Loss Reporting Data</relationshipLabel>
    <relationshipName>Profit_Loss_Reporting_Data</relationshipName>
    <type>Lookup</type>
</CustomField>