force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <label>Exchange Rate</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>