force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense</label>
    <referenceTo>pse__Expense__c</referenceTo>
    <relationshipLabel>Profit Loss Reporting Data</relationshipLabel>
    <relationshipName>Profit_Loss_Reporting_Data</relationshipName>
    <type>Lookup</type>
</CustomField>