force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forecast</label>
    <referenceTo>pse__Forecast__c</referenceTo>
    <relationshipLabel>Profit Loss Reporting Data</relationshipLabel>
    <relationshipName>Profit_Loss_Reporting_Data</relationshipName>
    <type>Lookup</type>
</CustomField>