force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Home_Accounting_Currency__c.field-meta.xml
<CustomField>
    <fullName>Home_Accounting_Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Accounting Currency</label>
    <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
    <relationshipLabel>Profit Loss Reporting Data (Home Accounting Currency)</relationshipLabel>
    <relationshipName>Profit_Loss_Reporting_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>