force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Home_Amount__c.field-meta.xml
<CustomField>
    <fullName>Home_Amount__c</fullName>
    <label>Home Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>