force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Period</label>
    <referenceTo>c2g__codaPeriod__c</referenceTo>
    <relationshipLabel>Profit Loss Reporting Data</relationshipLabel>
    <relationshipName>Profit_Loss_Reporting_Data</relationshipName>
    <type>Lookup</type>
</CustomField>