force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <description>This is the Id of the record from which this report data originated.</description>
    <inlineHelpText>This is the Id of the record from which this report data originated.</inlineHelpText>
    <label>Reference Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>