force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>Reference_Type__c</fullName>
    <label>Reference Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Revenue Recognition</fullName>
            </value>
            <value>
                <fullName>Estimate vs. Actuals</fullName>
            </value>
            <value>
                <fullName>Project Forecast</fullName>
            </value>
            <value>
                <fullName>Timecard</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>