force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>Project__r.pse__Region__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>