force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Report_Record_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Record_End_Date__c</fullName>
    <description>This field determines whether this record is current or not.  When a source record is updated after the data has been captured in this object, a new version of that record is captured.  The existing data row will then have an end date.  For all reporting other than fluctuations, queries should include only rows where this field is null.  This will ignore historic data.</description>
    <inlineHelpText>For all reporting other than fluctuations, queries should include only rows where this field is null.  This will ignore historic data.</inlineHelpText>
    <label>Report Record End Date</label>
    <type>DateTime</type>
</CustomField>