force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Reporting_Month__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Month__c</fullName>
    <label>Reporting Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>