force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period__c</fullName>
    <formula>Text(Reporting_Month__c) + &quot;-&quot; + Text(Reporting_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Period</label>
    <type>Text</type>
</CustomField>