force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Reporting_Period_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period_Date__c</fullName>
    <formula>DATE( Reporting_Year__c , Reporting_Month__c ,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Period</label>
    <type>Date</type>
</CustomField>