force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Reporting_Year__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Year__c</fullName>
    <label>Reporting Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>