force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Profit Loss Reporting Data</relationshipLabel>
    <relationshipName>Profit_Loss_Reporting_Data</relationshipName>
    <type>Lookup</type>
</CustomField>