force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Amount__c</fullName>
    <formula>IF( TEXT( Category__c ) = &quot;Revenue&quot;,  Amount__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>