force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Revenue_Recognition_Transaction_Line__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognition_Transaction_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Recognition Transaction Line</label>
    <referenceTo>ffrr__RevenueRecognitionTransactionLine__c</referenceTo>
    <relationshipLabel>Profit Loss Reporting Data</relationshipLabel>
    <relationshipName>Profit_Loss_Reporting_Data</relationshipName>
    <type>Lookup</type>
</CustomField>