force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Labor - Employees</fullName>
            </value>
            <value>
                <fullName>Labor - Subcontractors</fullName>
            </value>
            <value>
                <fullName>Other Costs</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>