force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Time_Period__c.field-meta.xml
<CustomField>
    <fullName>Time_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Period</label>
    <referenceTo>pse__Time_Period__c</referenceTo>
    <relationshipLabel>Profit Loss Reporting Data</relationshipLabel>
    <relationshipName>Profit_Loss_Reporting_Data</relationshipName>
    <type>Lookup</type>
</CustomField>