force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Timecard__c.field-meta.xml
<CustomField>
    <fullName>Timecard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timecard</label>
    <referenceTo>pse__Timecard__c</referenceTo>
    <relationshipLabel>Profit Loss Reporting Data</relationshipLabel>
    <relationshipName>Profit_Loss_Reporting_Data</relationshipName>
    <type>Lookup</type>
</CustomField>