force-app/main/default/objects/Profit_Loss_Reporting_Data__c/fields/Type_Period__c.field-meta.xml
<CustomField>
    <fullName>Type_Period__c</fullName>
    <formula>TEXT( Type__c ) + &quot; &quot; +   Reporting_Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type &amp; Period</label>
    <type>Text</type>
</CustomField>