force-app/main/default/objects/Profit_Loss_Reporting_Data__c/recordTypes/Actual.recordType-meta.xml
<RecordType>
    <fullName>Actual</fullName>
    <active>true</active>
    <description>This is actual data (past)</description>
    <label>Actual</label>
</RecordType>