force-app/main/default/objects/Profit_Loss_Reporting_Data__c/recordTypes/Forecast.recordType-meta.xml
<RecordType>
    <fullName>Forecast</fullName>
    <active>true</active>
    <description>This is forecast data (future)</description>
    <label>Forecast</label>
</RecordType>